[package]
name = "sample"
version = "0.1.0"
authors = ["ytakasugi <sh7.tibi0129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }