[package]
name = "sample"
version = "0.1.0"
authors = ["ytakasugi <sh7.tibi0129@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
fern = "0.6.1"
log = "0.4.17"
simplelog = "0.12.0"
