[package]
name = "sample"
version = "0.1.0"
authors = ["ytakasugi <sh7.tibi0129@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.1"
log = "0.4.17"
num_cpus = "1.15.0"
time = "0.3.17"
tokio = {version = "1.23.0", features = ["full"]}
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
