[package]
name = "web-memory"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.7", features = ["full"] }
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tera = "1.10.0"
rusqlite = { version = "0.25.3", features = ["uuid"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_urlencoded = "0.7.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }